examples/invalid/06_unqualified_variant_pattern.lane
// invalid: enum variants in patterns must be qualified
enum Option[A] {
  none
  some(A)
}

fn unwrap_or(value : Option[Int], fallback : Int) -> Int {
  match value {
    none => fallback
    some(x) => x
  }
}

